<resources>
    <string name="app_name">Quản lý thư viện</string>
    <string name="thu_vien">Thư viện</string>
    <string name="dang_nhap">ĐĂNG NHẬP</string>
    <string name="tai_khoan">Tài khoản:</string>
    <string name="mat_khau">Mật khẩu:</string>
    <string name="quen_mat_khau">Quên mật khẩu?</string>
    <string name="email">Email:</string>
    <string name="quay_lai">Quay lại</string>
    <string name="gui">Gửi</string>
    <string name="sua">Sửa</string>
    <string name="luu">Lưu</string>
    <string name="ngon_ngu">Ngôn ngữ:</string>
    <string name="chua_co_danh_gia">Chưa có đánh giá</string>
    <string name="xoa">Xóa</string>
    <string name="trang">trang</string>
    <string name="vnd">VNĐ</string>
    <string name="da_chon">\t Đã chọn</string>
    <string name="ngay_xuat_ban">Ngày xuất bản:</string>
    <string name="them_dau_sach">Thêm đầu sách</string>
    <string name="them_doc_gia">Thêm độc giả</string>
    <string name="them_sach">Thêm sách</string>
    <string name="chia_se">Chia sẻ</string>
    <string name="quet_ma_dau_sach">Quét mã đầu sách</string>
    <string name="quet_ma_doc_gia">Quét mã độc giả</string>
    <string name="ten_sach">Tên sách:\t</string>
    <string name="tim_thay_ma">Tìm thấy đầu sách có mã: \t</string>
    <string name="khong_tim_thay_ma">Không tìm thấy đầu sách có mã: \t</string>
    <string name="sua_thanh_cong">Sửa thông tin thành công</string>
    <string name="viet_danh_gia">Viết đánh giá của bạn... </string>
    <string name="de_lai_danh_gia">Để lại đánh giá của bạn với quyển sách này</string>
    <string name="gui_danh_gia">gửi đánh giá</string>
    <string name="huy">Hủy</string>
    <string name="them_thanh_cong">Thêm thành công</string>
    <string name="tim_online">Tìm online</string>
    <string name="cap_quyen">Vui lòng cấp quyền để sử dụng!</string>
    <string name="da_chinh_suu">Đã chỉnh sửa</string>
    <string name="thanh_cong">thành công</string>
    <string name="con_sach">\tvẫn còn sách, không thể xóa!</string>
    <string name="sai_dinh_dang_ngay">Nhập vào một ngày với định dạng DD/MM/YYYY!</string>
    <string name="that_bai">thất bại</string>
    <string name="sua_trang_thai">Sửa trạng thái</string>
    <string name="chon_trang_thai">Chọn trạng thái:</string>
    <string name="them">Thêm</string>
    <string name="xap_xep_dau_sach">Xắp xếp đầu sách</string>
    <string name="chon_tieu_chi_xap_xep">Chọn một tiêu chí theo:</string>
    <string name="nhap_so_luong_sach">Nhập số lượng sách:</string>
    <string name="vui_long_nhap_so_sach">vui lòng nhập số sách!</string>
    <string name="loi_so_trang">Số trang không được là số âm!</string>
    <string name="chi_tiet">Chi tiết</string>
    <string name="ten_dau_sach">Tên đầu sách:</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="hint_tim_kiem">Tên sách, tác giả...</string>
    <string name="tac_gia">Tác giả:\t</string>
    <string name="noi_dung">Nội dung:...</string>
    <string name="ma_dau_sach">Mã đầu sách:</string>
    <string name="chua_co_tai_khoan">Bạn chưa có tài khoản? Liên hệ thủ thư để đăng kí.</string>
    <string name="lay_lai_mat_khau">Hãy điền địa chỉ email của bạn đã đăng kí để tạo mật khẩu mới:</string>
    <string name="kiem_tra_tai_khoan">Tài khoản không được để trống!</string>
    <string name="kiem_tra_mat_khau">Mật khẩu không được để trống!</string>
    <string name="dang_nhap_that_bai">Đăng nhập thất bại!</string>
    <string name="dang_xu_ly">Đang xử lý...</string>
    <string name="gui_email">Kiểm tra email của bạn để lấy lại mật khẩu</string>
    <string name="gui_email_loi">Địa chỉ email không tồn tại,xin kiểm tra lại!</string>
    <string name="email_chu_de">Lấy lại mật khẩu của bạn</string>
    <string name="email_mat_khau">Mật khẩu của bạn là : </string>
    <string name="email_khong_hop_le">Địa chỉ email không hợp lệ!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="san_sang">Sẵn sàng</string>
    <string name="da_muon">Đã mượn</string>
    <string name="tom_luoc_chi_chiet">Tóm lược nội dung:</string>
    <string name="nha_xuat_ban">Nhà xuất bản:</string>
    <string name="so_trang">Số trang:</string>
    <string name="vi_tri">Vị trí:</string>
    <string name="ma_sach">Mã sách:</string>
    <string name="the_loai">Thể loại:</string>
    <string name="tinh_trang">Tình trạng:</string>
    <string name="gia_sach">Giá:</string>
    <string name="xem_ds_sach">Xem danh sách sách</string>
    <string name="ds_sach">Danh sách sách</string>
    <string name="so_luong">Số lượng:</string>
    <string name="quyen">quyển</string>
    <string name="chon">Chọn</string>
    <string name="sua_thong_tin_sach">Sửa thông tin sách</string>
    <string name="gioi_tinh">Giới tính:</string>
    <string name="dien_thoai">Điện thoại:</string>
    <string name="dia_chi">Địa chỉ:</string>
    <string name="ngay_lam_the">Ngày làm thẻ:</string>
    <string name="ten_nguoi_dung">Tên người dùng:</string>
    <string name="ngay_sinh">Ngày sinh:</string>
    <string name="quyen_han">Quyền hạn:</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="hay_nhap_du_thong_tin">Hãy nhập đủ thông tin!</string>
    <string name="mat_khau_moi">Mật khẩu mới:</string>
    <string name="sai_tai_khoan_mat_khau">Tài khoản hoặc mật khẩu không đúng!</string>
    <string name="doc_gia">Độc giả</string>
    <string name="danh_gia_binh_luan">Đánh giá và bình luận:</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="xac_nhan_mat_khau">Xác nhận mật khẩu:</string>
    <string name="xac_nhan_mat_khau_sai">Mật khẩu không đúng!</string>
    <string name="tai_khoan_ton_tai">Tài khoản đã tồn tại!</string>
    <string name="thong_tin_cua_toi">Thông tin của tôi</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="loi_thao_tac">Thao tác không thành công, vui lòng thử lại sau!</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="ban_co_muon_thoat">Bạn có chắc chắn muốn thoát không?</string>
    <string name="co">Có</string>
    <string name="khong">Không</string>
    <string name="khong_co_internet">Không có kết nối internet, vui lòng kiểm trả kết nối của bạn!</string>
    <string name="email_khong_ton_tai">Địa chỉ email không tồn tại, xin kiểm tra lại!</string>
    <string name="kiem_tra_email">Hệ thống sẽ gửi cho bạn một email với MÃ XÁC THỰC, kiểm tra email của bạn và làm theo hướng dẫn:</string>
    <string name="nhap_ma_xac_thuc">Nhập mã xác thực</string>
    <string name="gui_lai_ma">Gửi lại mã</string>
    <string name="doi_mat_khau_thanh_cong">Đổi mật khẩu thành công!</string>
    <string name="mat_khau_khong_duoc_trong">Mật khẩu không được trống!</string>
    <string name="danh_nhap_thanh_cong">Đăng nhập Thành công</string>
    <string name="quan_ly_de_muc">Quản lý đề mục</string>
    <string name="nhap_day_du">Hãy nhập đủ thông tin!</string>
    <string name="them_nhan_vien">Thêm nhân viên</string>
    <string name="quet_ma_nhan_vien">Quét mã nhân viên</string>
    <string name="ngay_vao_lam">Ngày vào làm:</string>
    <string name="sua_doc_gia">Sửa thông tin độc giả</string>
    <string name="sua_nhan_vien">Sửa nhân viên</string>
    <string name="chuc_vu">Chức vụ:</string>
    <string name="so_luot_xem_sach">Số lượt xem sách</string>
    <string name="so_luot_muon_sach">Số lượt mượn sách</string>
    <string name="so_diem_rating_trung_binh">Số điểm rating trung bình</string>
    <string name="thong_tin_chi_tiet">Thông tin chi tiết</string>
    <string name="thu_thu">Thủ thư</string>
    <string name="ki_thuat">Kĩ thuật</string>
    <string name="ban_quan_ly">Ban quản lý</string>
    <string name="chon_het">Chọn hết</string>
    <string name="ds_de_muc">Danh sách đề mục</string>
    <string name="danh_sach_the_loai">Danh sách thể loại</string>
    <string name="danh_sach_tac_gia">Danh sách tác giả</string>
    <string name="danh_sach_nha_xuat_ban">Danh sách nhà xuất bản</string>
    <string name="danh_sach_vi_tri">Danh sách vi trí</string>
    <string name="nhap_ten_the_loai">Nhập tên thể loại</string>
    <string name="them_the_loai">Thêm thể loại</string>
    <string name="vui_long_nhap_ten">Vui lòng nhập tên!</string>
    <string name="chu_thich_mot_sao">Rất dở và không nói gì thêm</string>
    <string name="chu_thich_hai_sao">Tạm được nhưng cần cải thiện hơn</string>
    <string name="chu_thich_ba_sao">Hay và chỉ có hay</string>
    <string name="chu_thich_bon_sao">Rất hay, đáng đồng tiền bát gạo</string>
    <string name="chu_thich_nam_sao">Cực hay luôn, tuyệt vời ông mặt trời</string>
    <string name="them_de_muc">Thêm đề mục</string>
    <string name="sua_the_loai">Sửa thể loại</string>
    <string name="da_xoa">Đã xóa</string>
    <string name="ban_co_muon_xoa">Bạn có chắc chắn muốn xóa thể loại</string>
    <string name="ban_co_muon_xoa_cuon">Bạn có muốn xóa các cuốn đã chọn?</string>
    <string name="xoa_doc_gia">Xóa dộc giả</string>
    <string name="ban_co_muon_xoa_doc_gia">Bạn có chắc chắn muốn xóa các dộc giả đã chọn?</string>
    <string name="xoa_dau_sach">Xóa đầu sách</string>
    <string name="xoa_nhan_vien">Xóa nhân viên</string>
    <string name="ban_co_muon_xoa_nhan_vien">Bạn có chắc chắn muốn xóa các nhân viên đã chọn?</string>
    <string name="ban_co_muon_xoa_dau_sach">Bạn có chắc chắn muốn xóa các đầu sách đã chọn?</string>
    <string name="xoa_sach">Xóa sách</string>
    <string name="them_tac_gia">Thêm tác giả</string>
    <string name="nhap_ten_tac_gia">Nhập tên tác giả:</string>
    <string name="them_nha_xuat_ban">Thêm nhà xuất bản</string>
    <string name="nhap_ten_nha_xuat_ban">Nhập tên nhà xuất bản</string>
    <string name="them_vi_tri">Thêm vị trí</string>
    <string name="nhap_ten_vi_tri">Nhập tên vị trí:</string>
    <string name="sua_tac_gia">Sửa tác giả</string>
    <string name="title_activity_tim_online">TimOnlineActivity</string>
    <string name="khong_tim_thay">Không Tìm thấy dữ liệu với mã</string>
    <string name="ten_doc_gia">Tên độc giả</string>
    <string name="ten_nhan_vien">Tên nhân viên</string>
</resources>
