<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.ChangePasswordActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:text="@string/kiem_tra_email"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llDoiMatKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">




            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtNhapMaXacThuc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:background="@drawable/bg_calen"
                android:hint="@string/nhap_ma_xac_thuc"
                android:inputType="textCapCharacters"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceLarge"
                android:theme="@style/EditTextCustom" />




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtMatKhauMoi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/mat_khau"
                android:inputType="textPassword"
                android:textAppearance="?android:textAppearanceMedium"
                android:theme="@style/EditTextCustom" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtXacNhanMatKhauMoi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/xac_nhan_mat_khau"
                android:inputType="textPassword"
                android:textAppearance="?android:textAppearanceMedium"
                android:theme="@style/EditTextCustom" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btnThoatDoiMatKhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/quay_lai"
        android:textColor="#ffff" />

    <Button
        android:layout_centerHorizontal="true"
        android:id="@+id/btnGuiLaiMa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/gui_lai_ma"
        android:textColor="#ffff" />

    <Button
        android:id="@+id/btnXacNhan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/xac_nhan"
        android:textColor="#ffff" />


</RelativeLayout>