<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".activitys.ForgotPasswordActivity">

    <TextView
        android:id="@+id/txtLayLaiMatKhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:text="@string/lay_lai_mat_khau"
        android:textColor="#d4d4d4"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        style="@style/TextAppearance.App.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtLayLaiMatKhau"
        android:textColorHint="#d4d4d4">

        <EditText
            android:textColor="#ffff"
            android:id="@+id/edtTaiKhoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#d4d4d4" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/btnQuayLaiMatKhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtLayLaiMatKhau"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/quay_lai"
        android:textColor="#ffff" />

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/btnGuiMatKhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/gui"
        android:textColor="#ffff" />

</RelativeLayout>